# Conversational-Assessment-Recommender

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_CATALOG_REPORT.md  INFRASTRUCTURE_USAGE_GUIDE.md  PHASE10_COMPARISON_ENGINE.txt  PHASE11_GUARDRAILS_ENGINE.txt  PHASE12_ORCHESTRATOR.txt  PHASE13_FASTAPI_SERVICE.txt  PHASE15_TESTING_FRAMEWORK.txt  PHASE1_COMPLETE.txt  PHASE1_INFRASTRUCTURE_COMPLETE.md  PHASE1_SUMMARY.md  PHASE1_VERIFICATION.md  PHASE5_KNOWLEDGE_BASE.txt  PHASE6_STATE_ENGINE.txt  PHASE6_SUMMARY.md  PHASE7_INTENT_ENGINE.txt  PHASE8_PIPELINE_FLOW.txt  PHASE8_RETRIEVAL_PIPELINE.txt  PHASE9_RECOMMENDATION_ENGINE.txt  PRE_DEPLOYMENT_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  verify.sh  verify_deployment.sh
evaluation/: __init__.py
scripts/: analyze_recall.py  audit_catalog.py  build_catalog.py  build_catalog_from_downloaded_html.py  build_knowledge_base.py  create_mock_catalog.py  diagnose_full_flow.py  diagnose_pipeline.py  kb_stats.py  profile_bottlenecks.py  query_knowledge_base.py  reprocess_catalog.py  run_evaluation.py  run_tests.py  scrape_real_catalog.py  simple_test.py  startup.sh  test_catalog_demo.py  test_comparison_engine.py  test_fastapi_service.py  test_final.py  test_flow.py  test_guardrails_engine.py  test_intent_engine.py  test_kb_demo.py  test_orchestrator.py  test_prompt_service.py  test_recommendation_engine.py  test_retrieval_pipeline.py  test_state_engine.py  test_system_validation.py  validate_knowledge_base.py  verify_catalog.py  (+8 more)
(+336 files in other folders)
